--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,25 @@
 Package: usincometaxes
-Title: What the Package Does (One Line, Title Case)
+Title: Calculate Federal and State Income Taxes in the United States
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Shane",
+           family = "Orr",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "shane.j.orr@gmail.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Calculates federal and state income taxes in the United States. It acts as 
+    a wrapper to the NBER's TAXSIM 32 tax simulator. TAXSIM 32 conducts the calculations, while 
+    usincometaxes prepares the data for TAXSIM 32, sends the data to TAXSIM 32's server, retrieves 
+    the data, and places it into a data frame. All without the user worrying about this process.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 URL: https://github.com/shanejorr/usincometaxes
 BugReports: https://github.com/shanejorr/usincometaxes/issues
+Imports: 
+    RCurl
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
