--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-URL: https://github.com/shanejorr/usincometaxes
+URL: https://github.com/shanejorr/usincometaxes,
+    https://shanejorr.github.io/usincometaxes
 BugReports: https://github.com/shanejorr/usincometaxes/issues
 Imports: 
     RCurl
