--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,9 @@ URL: https://github.com/shanejorr/usincometaxes,
     https://shaneorr.io/r/usincometaxes
 BugReports: https://github.com/shanejorr/usincometaxes/issues
 Imports: 
-    RCurl
+    RCurl,
+    readr,
+    vroom
 Suggests: 
     testthat (>= 3.0.0)
 Depends: 
