add option to use curl http interface for Taxsim

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,10 @@ Depends:
     R (>= 3.1)
 Imports: 
     datasets,
-    vroom
+    vroom,
+    httr,
+    tibble,
+    utils
 Suggests: 
     dplyr,
     ggplot2,
