complete interface vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: usincometaxes
 Title: Calculate Federal and State Income Taxes in the United States
 Version: 0.4.0
-Authors@R: 
-    person("Shane", "Orr", , "shane.j.orr@gmail.com", role = c("aut", "cre", "cph"))
+Authors@R: c(
+    person("Shane", "Orr", email = "shane.j.orr@gmail.com", role = c("aut", "cre", "cph"))
+    )
 Description: Calculates federal and state income taxes in the United States. It acts as a wrapper 
     to the NBER's TAXSIM 35 (<http://taxsim.nber.org/taxsim35/>) tax simulator. TAXSIM 35 conducts 
     the calculations, while 'usincometaxes' prepares the data for TAXSIM 35, sends the data to 
-    TAXSIM 35's server, retrieves the data, and places it into a data frame. All without the user
-    worrying about this process.
+    TAXSIM 35's server or communicates with the Web Assembly file, retrieves the data, and places it 
+    into a data frame. All without the user worrying about this process.
 License: MIT + file LICENSE
 URL: https://github.com/shanejorr/usincometaxes,
     https://shaneorr.io/r/usincometaxes
