--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: usincometaxes
 Title: Calculate Federal and State Income Taxes in the United States
-Version: 0.4.0
+Version: 0.5.0
 Authors@R: c(
-    person("Shane", "Orr", email = "shane.j.orr@gmail.com", role = c("aut", "cre", "cph"))
+    person("Shane", "Orr", email = "shane.j.orr@gmail.com", role = c("aut", "cre", "cph")),
+    person("Thomas", "Wells", email = "thomascwells@gmail.com", role = "ctb")
     )
 Description: Calculates federal and state income taxes in the United States. It acts as a wrapper 
     to the NBER's TAXSIM 35 (<http://taxsim.nber.org/taxsim35/>) tax simulator. TAXSIM 35 conducts 
