--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,6 +7,10 @@ authors:
      href: https://shaneorr.io
   Thomas Wells:
      href: https://github.com/thomascwells
+  footer:
+    roles: [aut, ctb]
+  sidebar:
+    roles: [aut, ctb]
 
 destination: '../shanes-site/static/R/usincometaxes'
 
@@ -19,3 +23,13 @@ articles:
   - taxsim-output
   - send-data-to-taxsim
   - interface-options
+
+home:
+  title: An R package to calculate federal and state income taxes in the United States
+  description: >
+    `usincometaxes` is an R package that calculates federal and state income taxes in the United States.
+    It acts as a wrapper to the NBER's TAXSIM 35 (<http://taxsim.nber.org/taxsim35/>) tax simulator. TAXSIM 35 conducts
+    the calculations, while 'usincometaxes' prepares the data for TAXSIM 35, sends the data to
+    TAXSIM 35's server or communicates with the Web Assembly file, retrieves the data, and places it
+    into a data frame. All without the user worrying about this process.
+
